--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -40,7 +40,8 @@ on early-init
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
-    mount_all /vendor/etc/fstab.qcom --early
+
+    mount_all /vendor/etc/fstab.qcom
 
     write /proc/sys/vm/swappiness 100
 
@@ -53,11 +54,8 @@ on fs
     mkdir /persist/bms 0700 root system
     restorecon_recursive   /persist
 
-    # Start HW service manager early
-    start hwservicemanager
-
-on post-fs
-    chmod 0755 /sys/kernel/debug/tracing
+    wait /dev/block/bootdevice/by-name/dsp
+    restorecon_recursive   /dsp
 
 on init
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
@@ -325,17 +323,6 @@ on boot
     chown system system /sys/kernel/debug/clk/gcc_oxili_gfx3d_clk/rate_stats
     chmod 0664 /sys/kernel/debug/clk/gcc_oxili_gfx3d_clk/rate_stats
     write /sys/kernel/debug/clk/gcc_oxili_gfx3d_clk/rate_stats 1
-
-on late-fs
-    # Start bootanim and its dependencies
-    start surfaceflinger
-    start bootanim
-    start hwcomposer-2-1
-    start configstore-hal-1-0
-    start gralloc-2-0
-
-    # Mount RW partitions which need run fsck
-    mount_all /vendor/etc/fstab.qcom --late
 
 # msm specific files that need to be created on /data
 on post-fs-data
