--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -533,9 +533,10 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-service charger /vendor/bin/charge_only_mode
-    user root
-    group graphics system input
+#service charger /sbin/charge_only_mode
+#    class charger
+#    group log
+#    seclabel u:r:charger:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
