--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -649,6 +649,17 @@ service netmgrd /vendor/bin/netmgrd
     group root wifi wakelock radio inet diag
     seclabel u:r:netmgrd:s0
 
+service ipacm-diag /vendor/bin/ipacm-diag
+    class main
+    user radio
+    socket ipacm_log_file dgram 660 radio radio
+    group radio diag oem_2950
+
+service ipacm /vendor/bin/ipacm
+    class main
+    user radio
+    group radio inet
+
 service qti /vendor/bin/qti
     class main
     user radio
