--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -393,8 +393,14 @@ on boot
 on enable-low-power
 
     # if EAS is present, switch to sched governor (no effect if not EAS)
+    write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpufreq/schedutil/rate_limit_us 0
+    #set the hispeed_freq
+    write /sys/devices/system/cpu/cpufreq/schedutil/hispeed_freq 1401600
+    #default value for hispeed_load is 90, for 8953 and sdm450 it should be 85
+    write /sys/devices/system/cpu/cpufreq/schedutil/hispeed_load 85
 
     # Update DVR cpusets to boot-time values.
     write /dev/cpuset/kernel/cpus 0-3
