--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -394,6 +394,13 @@ on enable-low-power
     write /sys/devices/system/cpu/cpufreq/schedutil/hispeed_freq 1401600
     #default value for hispeed_load is 90, for 8953 and sdm450 it should be 85
     write /sys/devices/system/cpu/cpufreq/schedutil/hispeed_load 85
+    write /dev/stune/foreground/schedtune.sched_boost_no_override 1
+    write /dev/stune/top-app/schedtune.sched_boost_no_override 1
+    write /dev/stune/schedtune.colocate 0
+    write /dev/stune/background/schedtune.colocate 0
+    write /dev/stune/foreground/schedtune.colocate 0
+    write /dev/stune/top-app/schedtune.colocate 1
+    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
     # Update DVR cpusets to boot-time values.
     write /dev/cpuset/kernel/cpus 0-3
