--- a/rootdir/etc/init.mods.rc
+++ b/rootdir/etc/init.mods.rc
@@ -2,12 +2,12 @@
 # By klozz Jesús aka TeamMEX@xda-developers
 
 on nonencrypted
-    start gbmodinstall
+    start vendor.gbmodinstall
 
 on property:vold.decrypt=trigger_post_fs_data
-    start gbmodinstall
+    start vendor.gbmodinstall
 
-service mods_camd /vendor/bin/mods_camd
+service vendor.mods_camd /vendor/bin/mods_camd
     class late_start
     user camera
     group camera system inet input graphics
@@ -15,7 +15,7 @@ service mods_camd /vendor/bin/mods_camd
     rlimit 14 4 4
     ioprio rt 4
 
-service gbmodinstall /vendor/bin/init.gbmods.sh
+service vendor.gbmodinstall /vendor/bin/init.gbmods.sh
     user root
     oneshot
     disabled
