--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -157,7 +157,9 @@ on boot
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
     # Create directory used for display
+    # for backward compatibility
     mkdir /persist/display 0770 system graphics
+    mkdir /mnt/vendor/persist/display 0770 system graphics
 
     # Create directory used for hbt
     chown system system /sys/kernel/hbtp/display_pwr
