--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -918,7 +918,10 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wdsp0/boot
     chown media audio /sys/kernel/wcd_cpe0/fw_name
 
-service perfd /vendor/bin/perfd
+service vendor.energy-awareness /vendor/bin/energy-awareness
     class main
     user root
-    group root system
+    group system
+    oneshot
+
+
