--- a/rootdir/etc/init.mmi.usb.rc
+++ b/rootdir/etc/init.mmi.usb.rc
@@ -60,7 +60,6 @@ on fs
     mount functionfs adb /dev/usb-ffs/adb noatime uid=2000,gid=2000,no_disconnect=1
     mkdir /dev/usb-ffs/mtp 0770 mtp mtp
     mount functionfs mtp /dev/usb-ffs/mtp noatime rmode=0770,fmode=0660,uid=1024,gid=1024,no_disconnect=1
-    setprop sys.usb.ffs.aio_compat 1
 
 #  Disable USB-SS in bp-tools
 on property:ro.bootmode=bp-tools
@@ -348,6 +347,7 @@ on property:sys.usb.config=rndis
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=rndis,adb
+    setprop sys.usb.config rndis,${persist.sys.usb.config.extra},adb
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 22b8
     write /sys/class/android_usb/android0/idProduct 2e25
