--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -282,10 +282,10 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 
-#service vendor.charger /sbin/charge_only_mode
-#    class charger
-#    group log
-#    seclabel u:r:charger:s0
+service vendor.charger /sbin/charge_only_mode
+    class charger
+    group log
+    seclabel u:r:charger:s0
 
 # Allow usb charging to be disabled peristently
 on property:persist.usb.chgdisabled=1
