--- a/rootdir/etc/init.mmi.rc
+++ b/rootdir/etc/init.mmi.rc
@@ -253,6 +253,7 @@ on moto-charger
     trigger firmware_mounts_complete
     start vendor.charge_only_mode
     start vendor.thermal-com
+    start gbmodinstall
 
 on property:ro.boot.dualsim=true
    setprop persist.radio.multisim.config dsds
@@ -290,6 +291,7 @@ service vendor.charge_only_mode /vendor/bin/charge_only_mode
     user root
     group graphics system input
     disabled
+    seclabel u:r:charger:s0
 
 service vendor.thermal-com /vendor/bin/thermal-engine --minimode
     class main
