--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -416,7 +416,7 @@ gEnableMgmtLogging=1
 rps_mask=0f
 
 
-gEnableMacAddrSpoof=2
+gEnableMacAddrSpoof=1
 
 gEnableTDLSScan=1
 gTDLSExternalControl=1
@@ -432,6 +432,12 @@ gEnableTDLSScanCoexistence=1
 gBtcEnableIndTimerVal=5
 
 gIgnorePeerErpInfo=1
+
+# BTC policy during wifi connection
+gBtcFastWlanConnPref=0
+
+ #Disable Firmware memery dump for vts
+gEnableFwrMemDump=0
 
 # TheCrazyLex@PA limit max AP peers to 10 to prevent overloading
 gSoftApMaxPeers=10
