--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -147,6 +147,9 @@ on boot
     # Create directory used for display
     mkdir /persist/display 0770 system graphics
 
+    # Create directory used for hbt
+    chown system system /sys/kernel/hbtp/display_pwr
+
 on late-fs
     # Start bootanim and its dependencies
     start surfaceflinger
